# reportscompany

./: .cursorrules.md  .env.example  .gitignore  .npmrc  AUTH_FIX_REFINED.md  BILLING_AUDIT.md  BILLING_QA_CHECKLIST.md  BILLING_QA_RESULTS.md  BRANDING_ANALYSIS.md  BRANDING_IMPLEMENTATION_PLAN.md  CONNECT_TO_DATABASE.md  CRITICAL_FIX_PREVIEW_API.md  CURSOR_FIX_BUILDERS.md  CURSOR_LEAD_PAGES_COMPLETE_PACKAGE.md  CURSOR_MASTER_PLAN_27AB.md  CURSOR_MOBILE_REPORT_VIEWER_PACKAGE.md  CURSOR_PEOPLE_UX_V2.md  CURSOR_PROMPT_ALL_THEMES.md  CURSOR_QUICK_START.md  CURSOR_TASK_1_SUPPRESSION.md  CURSOR_TASK_2_PDF_FIX.md  CURSOR_TASK_3_LOGGING_FIX.md  CURSOR_TASK_4_ROUTING_FIX.md  CURSOR_TASK_5_UI_QA.md  CURSOR_TASK_SUPPRESSION_FILTER.md  DEPLOYMENT_ISSUES_HANDOFF.md  DEPLOYMENT_STATUS_FIX.md  DetailsOfChat.md  EMAIL_REPORT_AUDIT.md  EXECUTION_PLAN_SUMMARY.md  FIX_PDF_REPORT_ID_ISSUE.md  LOCAL_SETUP_GUIDE.md  LOCAL_TEST_INSTRUCTIONS.md  LOGS_AUDIT_SUMMARY.md  MARKET_REPORTS_CODE_DUMP.md  MIGRATIONS_COMPLETE.md  Makefile  OldChat.md  PASS_W3_VISUAL_QA_EXECUTION.md  PEOPLE_PASS_4_QA_CHECKLIST.md  (+121 more)
apps/api/: ENV_TEMPLATE.md  README.md  pyproject.toml
apps/api/migrations/: phase4_indexes.sql
apps/api/src/api/: auth.py  cache.py  crmls_cities.py  db.py  main.py  settings.py  worker_client.py
apps/api/src/api/config/: billing.py
apps/api/src/api/middleware/: authn.py  rls.py
apps/api/src/api/routes/: account.py  admin.py  admin_metrics.py  affiliates.py  apikeys.py  auth.py  billing.py  branding_tools.py  company.py  contact_groups.py  contacts.py  dev_stripe_prices.py  devfiles.py  health.py  hello.py  lead_pages.py  leads.py  me.py  mobile_reports.py  onboarding.py  property.py  report_data.py  reports.py  schedules.py  stripe_webhook.py  unsubscribe.py  upload.py  usage.py  users.py  webhooks.py
apps/api/src/api/schemas/: __init__.py  property.py
apps/api/src/api/services/: __init__.py  accounts.py  affiliates.py  agent_code.py  billing_state.py  brand_resolver.py  branding.py  email.py  invite_service.py  plan_lookup.py  plans.py  property_stats.py  qr_service.py  sample_report_data.py  schedule_utils.py  simplyrets.py  (+4 more)
apps/api/tests/: conftest.py  test_accept_invite.py  test_affiliate_branding.py  test_billing_checkout.py  test_me_endpoint.py  test_plans_limits.py  test_schedules_report_types.py
apps/worker/: .dockerignore  Dockerfile  ENV_TEMPLATE.md  README.md  pyproject.toml  test_pipeline.py  test_simplyrets.py
apps/worker/scripts/: generate_preview_screenshots.py  test_template.py
apps/worker/src/worker/: ai_insights.py  ai_market_narrative.py  ai_overview.py  app.py  cache.py  filter_resolver.py  limit_checker.py  market_builder.py  pdf_adapter.py  pdf_engine.py  property_builder.py  query_builders.py  redis_utils.py  report_builders.py  schedules_tick.py  social_engine.py  tasks (Jerry Hernandez's conflicted copy 2025-11-11).py  tasks.py  template_filters.py
libs/shared/: pyproject.toml
libs/shared/src/shared/: __init__.py
(+1241 files in other folders)
