[tool.poetry]
name = "market-reports-api"
version = "0.1.0"
description = "FastAPI service for Market Reports"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic-settings = "^2.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
PyJWT = "^2.9.0"
redis = "^5.0.8"
sentry-sdk = "^2.13.0"
httpx = "^0.27.2"
psycopg = {version = "^3.2.1", extras = ["binary"]}
SQLAlchemy = "^2.0.35"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

